Fix textarea alignment

--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
             font-weight: bold;
         }
         textarea {
-            width: 100%;
+            width: calc(100% - 22px);
             padding: 10px;
             border: 1px solid #ddd;
             border-radius: 4px;
             min-height: 120px;
             margin-bottom: 15px;
             font-family: monospace;
+            box-sizing: border-box;
         }
         button {
             background-color: #3498db;
